# matmoms-tracker

./: .env.example  .gitignore  pyproject.toml
.github/workflows/: deploy.yml
config/: categories.yaml  products.yaml  stores.yaml
docs/: outreach.md
scripts/: export_site_data.py  scrape_and_export.sh
site/: index.html  package-lock.json  package.json  vite.config.ts
site/public/: CNAME  embed.html  robots.txt  sitemap.xml
site/public/data/: catalog.json  latest.json  products.json
site/src/: App.tsx  index.css
site/src/components/: BaselineProgress.tsx  BasketBuilder.tsx  CategoryTable.tsx  ChainComparison.tsx  EmbedInfo.tsx  Hero.tsx  JournalistCTA.tsx  Methodology.tsx  Nav.tsx  NewsBanner.tsx  PricePreview.tsx  ProductSearch.tsx  ProductTrend.tsx  Timeline.tsx
site/src/hooks/: useBasket.ts  useCatalog.ts  useData.ts
src/dashboard/: index.html
src/matmoms/: __init__.py  __main__.py  cli.py  tz.py
src/matmoms/api/: app.py  deps.py
src/matmoms/api/routes/: categories.py  export.py  health.py  overview.py  products.py  stores.py
src/matmoms/db/: __init__.py  engine.py  models.py  queries.py
src/matmoms/metrics/: __init__.py  campaigns.py  passthrough.py  snapshots.py
src/matmoms/scrapers/: __init__.py  base.py  coop.py  ica.py  runner.py  willys.py
tests/: conftest.py
tests/test_api/: test_overview.py
tests/test_metrics/: test_passthrough.py
tests/test_scrapers/: test_base.py
